Fixed Hover Bug + Added Faceit Style Card Layout

--- a/src/translations/translations.json
+++ b/src/translations/translations.json
@@ -361,7 +361,7 @@
       "Import": "Import"
     },
     "Footer": {
-      "company": "Made By Phlex Plexico",
+      "company": "Phlex Plexico",
       "metrics": "Metrics"
     }
   },
